--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="title">Tic Tac Toe</div>
-        <div class="logo"></div>
+        <div class="logo"><img src="abss.png" alt=""></div>
         <div class="tombol">
             <button onclick="showl()">LEADERBOARD</button>
             <button onclick="playGame()">PLAY GAME</button>
