--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
                 <div>XO</div>
             </div>
             <canvas id="canvas" width="300px" height="300px"></canvas>
+            <div class="tombol">
+                <button onclick="backGame()">Back</button>
+                <button onclick="restartGame()">Restart</button>
+            </div>
         </div>
-
     </div>
 
 </body>
